appId: com.juancastro.sudokuapp
---
- launchApp:
    clearState: true
# - tapOn:
#     text: "Continue"
#     optional: true
- extendedWaitUntil:
    visible: "Let's play!"
    timeout: 30000
- tapOn:
    text: "Let's play!"
- tapOn:
    text: "Stats"
- assertVisible: "Statistics"
- assertVisible: "No games yet"
- assertVisible: "Complete your first game to see your stats here."
- tapOn:
    text: "Go back"
- assertVisible: "SUDOKU"
